--- a/index.html
+++ b/index.html
@@ -14,13 +14,36 @@
       <div class="header__inner">
         <div class="logo">
           <a href="#" class="logo__link">
-            <img src="img/logo.png" alt="logo">
+            <img class='logo__link-img' src="img/logo.png" alt="logo">
           </a>
         </div>
+        <nav class="menu">
+          <button class="menu__btn"></button>
+        </nav>
       </div>
     </div>
   </header>
-
+    <!-- header -->
+  <section class="head">
+    <div class="top-slider">
+      <div class="top-slider__item">
+        <h3 class="top-slider__title">
+          мысли глобально
+        </h3>
+      </div>
+      <div class="top-slider__item">
+        <h3 class="top-slider__title">
+          мысли глобально
+        </h3>
+      </div>
+      <div class="top-slider__item">
+        <h3 class="top-slider__title">
+          мысли глобально
+        </h3>
+      </div>
+    </div>
+  </section>
+  <!-- /.head -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="js/main.js"></script>
 </body>
