--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="libs/slick/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,21 +31,42 @@
         <h3 class="top-slider__title">
           мысли глобально
         </h3>
+        <p class="top-slider__text">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении</p>
+        <button class="top-slider__btn">подробнее</button>
       </div>
       <div class="top-slider__item">
         <h3 class="top-slider__title">
           мысли глобально
         </h3>
+        <p class="top-slider__text">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении</p>
+        <button class="top-slider__btn">подробнее</button>
       </div>
       <div class="top-slider__item">
         <h3 class="top-slider__title">
           мысли глобально
         </h3>
+        <p class="top-slider__text">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении</p>
+        <button class="top-slider__btn">подробнее</button>
       </div>
     </div>
   </section>
   <!-- /.head -->
+  <section class="call">
+    <div class="container">
+      <div class="call__inner">
+        <div class="call__box">
+          <h5 class="call__title">Вы полюбите нас с первой встречи!</h5>
+          <p class="call__text">Мы предоставляем комплексный подход к продвижению компании, 
+            продуктов и услуг в цифровой сфере.
+          </p>
+        </div>
+        <button class="call__btn">ПЕРЕЗВОНИТЕ МНЕ</button>
+      </div>
+    </div>
+  </section>
+  <!-- /.call -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="libs/slick/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
